fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@ nav ol {
 nav a {
   text-decoration: none;
   color: #0066FF;
+  display: block;
 }
 
 a:hover {
@@ -65,13 +66,22 @@ h3 {
   margin: 0;
 }
 
+.bucket {
+  background-color: #eee;
+}
+
 footer {
   background-color: #ddd;
 }
 
+
 @media only screen and (min-width: 25em) {
 
 nav li {
+  display: inline;
+}
+
+nav a {
   display: inline;
 }
 }
